# snake_labs

./: .gitignore  LICENSE  entities.py  game_board.py  main.py  readme.md  render_test.py  style_guide.md
ai_examples/: ai_examples.py  example.py  game_01_movement.py  game_02_collision_collect.py  game_03_state_machine.py  game_04_timers_particles.py
ai_examples/snake_labs_framework/: main.py  pyproject.toml  readme.md
ai_examples/snake_labs_framework/snake_labs/: __init__.py  cli.py
ai_examples/snake_labs_framework/snake_labs/core/: __init__.py  entities.py  grid.py  rules.py  simulation.py  tiles.py
ai_examples/snake_labs_framework/snake_labs/engine/: __init__.py  audio.py  input.py  renderer.py
ai_examples/snake_labs_framework/snake_labs/levels/: sandbox.json  tutorial_01.json
ai_examples/snake_labs_framework/snake_labs/utils/: file_loader.py  logger.py
game_engine/: entities.py  game_board.py  movement.py
testing/: render_test.py
